--- a/public/app-assets/css/pages/app-invoice.css
+++ b/public/app-assets/css/pages/app-invoice.css
@@ -1,40 +1,49 @@
 /* Invoice list */
 /*---------------*/
-.invoice-list-wrapper
-{
+.invoice-list-wrapper {
     margin-top: 45px;
     margin-bottom: 22px;
     /* invoice wrapper */
 }
 
-.invoice-list-wrapper .responsive-table
-{
+.invoice-list-wrapper .responsive-table {
     /* data table */
     /* Data table Pagination*/
     /* small bullet*/
 }
 
-.invoice-list-wrapper .responsive-table .top .action-filters
-{
-    -webkit-box-flex: .95;
-    -webkit-flex-grow: .95;
-    -ms-flex-positive: .95;
-            flex-grow: .95;
+.invoice-list-wrapper .responsive-table .top .action-filters {
+    -webkit-box-flex: 0.95;
+    -webkit-flex-grow: 0.95;
+    -ms-flex-positive: 0.95;
+    flex-grow: 0.95;
 }
 
-.invoice-list-wrapper .responsive-table .top .action-filters .dataTables_filter
-{
+.invoice-list-wrapper
+    .responsive-table
+    .top
+    .action-filters
+    .dataTables_filter {
     width: 100%;
     padding-right: 30px;
 }
 
-.invoice-list-wrapper .responsive-table .top .action-filters .dataTables_filter label
-{
+.invoice-list-wrapper
+    .responsive-table
+    .top
+    .action-filters
+    .dataTables_filter
+    label {
     position: relative;
 }
 
-.invoice-list-wrapper .responsive-table .top .action-filters .dataTables_filter label input[type='search']
-{
+.invoice-list-wrapper
+    .responsive-table
+    .top
+    .action-filters
+    .dataTables_filter
+    label
+    input[type="search"] {
     height: 3.2rem;
     margin: 0;
     padding-left: 1.5rem;
@@ -45,79 +54,107 @@
     background: white;
 }
 
-.invoice-list-wrapper .responsive-table .top .action-filters .dataTables_filter label input[type='search']:focus
-{
+.invoice-list-wrapper
+    .responsive-table
+    .top
+    .action-filters
+    .dataTables_filter
+    label
+    input[type="search"]:focus {
     box-shadow: none;
 }
 
-.invoice-list-wrapper .responsive-table .top .action-filters .dataTables_filter label .filter-btn
-{
+.invoice-list-wrapper
+    .responsive-table
+    .top
+    .action-filters
+    .dataTables_filter
+    label
+    .filter-btn {
     position: absolute;
     top: -12px;
     right: 7px;
 }
 
-.invoice-list-wrapper .responsive-table .top .action-btns
-{
-    -webkit-box-flex: .05;
-    -webkit-flex-grow: .05;
-    -ms-flex-positive: .05;
-            flex-grow: .05;
+.invoice-list-wrapper .responsive-table .top .action-btns {
+    -webkit-box-flex: 0.05;
+    -webkit-flex-grow: 0.05;
+    -ms-flex-positive: 0.05;
+    flex-grow: 0.05;
     -webkit-justify-content: space-around;
     -ms-flex-pack: distribute;
-            justify-content: space-around;
+    justify-content: space-around;
 }
 
-.invoice-list-wrapper .responsive-table .invoice-data-table
-{
+.invoice-list-wrapper .responsive-table .invoice-data-table {
     border-collapse: collapse;
 
-    box-shadow: box-shadow .25s;
+    box-shadow: box-shadow 0.25s;
 }
 
-.invoice-list-wrapper .responsive-table .invoice-data-table th
-{
+.invoice-list-wrapper .responsive-table .invoice-data-table th {
     width: auto !important;
     padding: 19px 15px;
 
     border-bottom: 1px solid #e0e0e0;
 }
 
-.invoice-list-wrapper .responsive-table .invoice-data-table.dataTable tbody td
-{
-    padding: .8rem .8rem;
+.invoice-list-wrapper .responsive-table .invoice-data-table.dataTable tbody td {
+    padding: 0.8rem 0.8rem;
 }
 
-.invoice-list-wrapper .responsive-table .invoice-data-table.dataTable tbody td .invoice-action a
-{
+.invoice-list-wrapper
+    .responsive-table
+    .invoice-data-table.dataTable
+    tbody
+    td
+    .invoice-action
+    a {
     color: #9e9e9e;
 }
 
-.invoice-list-wrapper .responsive-table .invoice-data-table.dataTable tbody td .invoice-action a i
-{
+.invoice-list-wrapper
+    .responsive-table
+    .invoice-data-table.dataTable
+    tbody
+    td
+    .invoice-action
+    a
+    i {
     font-size: 1.5rem;
 }
 
-.invoice-list-wrapper .responsive-table .invoice-data-table tr:last-child
-{
+.invoice-list-wrapper .responsive-table .invoice-data-table tr:last-child {
     border-bottom-color: transparent;
 }
 
-.invoice-list-wrapper .responsive-table .invoice-data-table .dt-checkboxes-cell
-{
+.invoice-list-wrapper
+    .responsive-table
+    .invoice-data-table
+    .dt-checkboxes-cell {
     /* Data Table checkbox style */
 }
 
-.invoice-list-wrapper .responsive-table .invoice-data-table .dt-checkboxes-cell input
-{
-    opacity: .5;
+.invoice-list-wrapper
+    .responsive-table
+    .invoice-data-table
+    .dt-checkboxes-cell
+    input {
+    opacity: 0.5;
 
     -webkit-appearance: none;
 }
 
-.invoice-list-wrapper .responsive-table .invoice-data-table .dt-checkboxes-cell input::before,
-.invoice-list-wrapper .responsive-table .invoice-data-table .dt-checkboxes-cell input::after
-{
+.invoice-list-wrapper
+    .responsive-table
+    .invoice-data-table
+    .dt-checkboxes-cell
+    input::before,
+.invoice-list-wrapper
+    .responsive-table
+    .invoice-data-table
+    .dt-checkboxes-cell
+    input::after {
     position: absolute;
     z-index: 0;
     top: -4px;
@@ -127,17 +164,24 @@
     height: 18px;
     margin-top: -3px;
 
-    content: '';
-    -webkit-transition: .2s;
-            transition: .2s;
+    content: "";
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
 
     border: 2px solid #9e9e9e;
     border-radius: 4px;
 }
 
-.invoice-list-wrapper .responsive-table .invoice-data-table .dt-checkboxes-cell input:checked:before,
-.invoice-list-wrapper .responsive-table .invoice-data-table .dt-checkboxes-cell input:checked::after
-{
+.invoice-list-wrapper
+    .responsive-table
+    .invoice-data-table
+    .dt-checkboxes-cell
+    input:checked:before,
+.invoice-list-wrapper
+    .responsive-table
+    .invoice-data-table
+    .dt-checkboxes-cell
+    input:checked::after {
     top: -4px;
     left: -5px;
 
@@ -145,11 +189,11 @@
     height: 22px;
 
     -webkit-transform: rotate(40deg);
-        -ms-transform: rotate(40deg);
-            transform: rotate(40deg);
+    -ms-transform: rotate(40deg);
+    transform: rotate(40deg);
     -webkit-transform-origin: 100% 100%;
-        -ms-transform-origin: 100% 100%;
-            transform-origin: 100% 100%;
+    -ms-transform-origin: 100% 100%;
+    transform-origin: 100% 100%;
 
     border-top: 2px solid transparent;
     border-right: 2px solid #ff4081;
@@ -157,23 +201,32 @@
     border-left: 2px solid transparent;
 
     -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
-.invoice-list-wrapper .responsive-table .bottom
-{
+.invoice-list-wrapper .responsive-table .bottom {
     margin-top: 1rem;
 }
 
-.invoice-list-wrapper .responsive-table .bottom .dataTables_paginate .paginate_button
-{
-    margin-top: .25rem;
-    padding: .25em .65em;
+.invoice-list-wrapper
+    .responsive-table
+    .bottom
+    .dataTables_paginate
+    .paginate_button {
+    margin-top: 0.25rem;
+    padding: 0.25em 0.65em;
 }
 
-.invoice-list-wrapper .responsive-table .bottom .dataTables_paginate .paginate_button.current,
-.invoice-list-wrapper .responsive-table .bottom .dataTables_paginate .paginate_button:hover
-{
+.invoice-list-wrapper
+    .responsive-table
+    .bottom
+    .dataTables_paginate
+    .paginate_button.current,
+.invoice-list-wrapper
+    .responsive-table
+    .bottom
+    .dataTables_paginate
+    .paginate_button:hover {
     color: white !important;
     border: 1px solid #3f51b5;
     border-radius: 4px;
@@ -181,33 +234,37 @@
     box-shadow: 0 0 8px 0 #3f51b5;
 }
 
-.invoice-list-wrapper .responsive-table .bullet
-{
+.invoice-list-wrapper .responsive-table .bullet {
     display: inline-block;
 
     width: 10px;
     height: 10px;
-    margin-right: .2rem;
+    margin-right: 0.2rem;
 
     border-radius: 50%;
 }
 
-.invoice-list-wrapper table.dataTable.dtr-column > tbody > tr > td.control:before,
-.invoice-list-wrapper table.dataTable.dtr-column > tbody > tr > th.control:before
-{
+.invoice-list-wrapper
+    table.dataTable.dtr-column
+    > tbody
+    > tr
+    > td.control:before,
+.invoice-list-wrapper
+    table.dataTable.dtr-column
+    > tbody
+    > tr
+    > th.control:before {
     left: 80%;
 }
 
 /* Invoice */
 /*--------*/
-.invoice-view-wrapper .invoice-calc .invoice-title
-{
+.invoice-view-wrapper .invoice-calc .invoice-title {
     width: 171px;
 }
 
 .invoice-view-wrapper .invoice-from,
-.invoice-view-wrapper .invoice-to
-{
+.invoice-view-wrapper .invoice-to {
     font-size: 16px;
     font-weight: bold;
 
@@ -216,43 +273,38 @@
     color: #6b6f82;
 }
 
-.invoice-view-wrapper .invoice-action-wrapper .invoice-action-btn:not(:last-child)
-{
-    margin-bottom: .8rem;
+.invoice-view-wrapper
+    .invoice-action-wrapper
+    .invoice-action-btn:not(:last-child) {
+    margin-bottom: 0.8rem;
 }
 
-.invoice-view-wrapper .invoice-address
-{
+.invoice-view-wrapper .invoice-address {
     margin-bottom: 1rem;
 }
 
 /* Invoice Edit and Add */
 /*----------------------*/
-.invoice-edit-wrapper
-{
+.invoice-edit-wrapper {
     /* Invoice Item */
     /* Invoice action button */
     /* border color all form element*/
 }
 
-.invoice-edit-wrapper .invoice-date-picker
-{
+.invoice-edit-wrapper .invoice-date-picker {
     /* Date Picker label */
 }
 
-.invoice-edit-wrapper .invoice-date-picker small
-{
+.invoice-edit-wrapper .invoice-date-picker small {
     white-space: nowrap;
 }
 
-.invoice-edit-wrapper .px-36
-{
+.invoice-edit-wrapper .px-36 {
     padding-right: 36px;
     padding-left: 36px;
 }
 
-.invoice-edit-wrapper .invoice-item
-{
+.invoice-edit-wrapper .invoice-item {
     border: 1px solid #e8e8e8;
     border-radius: 4px;
     /* Invoice Icon*/
@@ -260,20 +312,17 @@
     /* dropdown content */
 }
 
-.invoice-edit-wrapper .invoice-item .invoice-icon
-{
+.invoice-edit-wrapper .invoice-item .invoice-icon {
     padding: 5px;
 
     border-left: 1px solid #e8e8e8;
 }
 
-.invoice-edit-wrapper .invoice-item .invoice-item-filed
-{
-    padding: .8rem;
+.invoice-edit-wrapper .invoice-item .invoice-item-filed {
+    padding: 0.8rem;
 }
 
-.invoice-edit-wrapper .invoice-item .dropdown-content
-{
+.invoice-edit-wrapper .invoice-item .dropdown-content {
     overflow: visible;
 
     width: 254px;
@@ -281,175 +330,168 @@
 }
 
 .invoice-edit-wrapper .delete-row-btn,
-.invoice-edit-wrapper .dropdown
-{
+.invoice-edit-wrapper .dropdown {
     cursor: pointer;
     text-align: center;
 }
 
 .invoice-edit-wrapper .delete-row-btn i,
-.invoice-edit-wrapper .dropdown i
-{
+.invoice-edit-wrapper .dropdown i {
     font-size: 1.2rem;
 }
 
-.invoice-edit-wrapper .invoice-action-wrapper .invoice-action-btn:not(:last-child)
-{
-    margin-bottom: .8rem;
+.invoice-edit-wrapper
+    .invoice-action-wrapper
+    .invoice-action-btn:not(:last-child) {
+    margin-bottom: 0.8rem;
 }
 
-.invoice-edit-wrapper .invoice-action-wrapper .invoice-action-btn:not(:last-child) .preview,
-.invoice-edit-wrapper .invoice-action-wrapper .invoice-action-btn:not(:last-child) .save
-{
-    padding: 0 .75rem;
+.invoice-edit-wrapper
+    .invoice-action-wrapper
+    .invoice-action-btn:not(:last-child)
+    .preview,
+.invoice-edit-wrapper
+    .invoice-action-wrapper
+    .invoice-action-btn:not(:last-child)
+    .save {
+    padding: 0 0.75rem;
 }
 
-.invoice-edit-wrapper .invoice-action-wrapper .btn
-{
+.invoice-edit-wrapper .invoice-action-wrapper .btn {
     padding: 0 0;
 }
 
 .invoice-edit-wrapper textarea.materialize-textarea,
 .invoice-edit-wrapper input,
-.invoice-edit-wrapper select
-{
+.invoice-edit-wrapper select {
     border-bottom: 1px solid #e8e8e8 !important;
 }
 
-@media (min-width: 600px)
-{
+@media (min-width: 600px) {
     /* responsive table*/
     .responsive-table .top .action-btns,
-    .responsive-table .top .action-filters
-    {
+    .responsive-table .top .action-filters {
         /* filters btn positioning on above middium screen */
     }
     .responsive-table .top .action-btns .btn,
-    .responsive-table .top .action-filters .btn
-    {
+    .responsive-table .top .action-filters .btn {
         padding: 0 1rem;
     }
     .responsive-table .top .action-btns .btn i,
-    .responsive-table .top .action-filters .btn i
-    {
+    .responsive-table .top .action-filters .btn i {
         float: left;
 
         margin-right: 8px;
     }
-    .invoice-date-picker
-    {
+    .invoice-date-picker {
         -webkit-box-pack: end;
         -webkit-justify-content: flex-end;
         -ms-flex-pack: end;
-                justify-content: flex-end;
+        justify-content: flex-end;
     }
-    .invoice-logo
-    {
+    .invoice-logo {
         -webkit-box-pack: end;
         -webkit-justify-content: flex-end;
         -ms-flex-pack: end;
-                justify-content: flex-end;
+        justify-content: flex-end;
     }
 }
 
-@media (max-width: 600px)
-{
-    .invoice-payment
-    {
+@media (max-width: 600px) {
+    .invoice-payment {
         padding: 1rem;
 
         border: 1px solid #e8e8e8;
         border-radius: 4px;
     }
     /* Date picker*/
-    .invoice-date-picker
-    {
+    .invoice-date-picker {
         -webkit-flex-wrap: wrap;
-            -ms-flex-wrap: wrap;
-                flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     }
 }
 
-@media (max-width: 1054px) and (min-width: 600px)
-{
-    .invoice-action-wrapper .btn .responsive-text
-    {
+@media (max-width: 1054px) and (min-width: 600px) {
+    .invoice-action-wrapper .btn .responsive-text {
         /* Button text */
-        font-size: .8rem;
+        font-size: 0.8rem;
     }
 }
 
-@media (min-width: 1201px)
-{
-    .invoice-view-wrapper .invoice-date
-    {
+@media (min-width: 1201px) {
+    .invoice-view-wrapper .invoice-date {
         -webkit-box-pack: end;
         -webkit-justify-content: flex-end;
         -ms-flex-pack: end;
-                justify-content: flex-end;
+        justify-content: flex-end;
     }
 }
 
-@media print
-{
+@media print {
     /* Hide a Unnecessary div while print invoice*/
     html,
-    body
-    {
+    body {
         visibility: hidden;
     }
-    .invoice-print-area
-    {
+    .invoice-print-area {
         visibility: visible;
-
+        margin: 0;
         page-break-after: auto;
     }
-    .invoice-print-area .divider
-    {
-        margin: .5rem 0 !important;
+    .invoice-print-area .row {
+        margin: 0;
+        padding: 5px;
+    }
+    .invoice-print-area .divider {
+        border-top: 1px solid #e8e8e8;
+        margin: 0.5rem 0 !important;
     }
     .invoice-action-wrapper,
     .sidenav-main,
-    .navbar,
+    /* .navbar, */
     .btn-customizer,
     .theme-cutomizer,
     .btn-buy-now,
-    .page-footer
-    {
+    .page-footer {
         display: none;
     }
     /* card shadow remove while printing invoice*/
-    .card
-    {
+    .card {
         box-shadow: none;
     }
-    .card .card-content
-    {
+    .card .card-content {
         padding: 0 !important;
     }
     /* table border added while printing invoice*/
+    .invoice-product-details table {
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
     table th,
-    table td
-    {
+    table td {
         border: 1px solid #e8e8e8;
+        width: auto;
+        max-width: none;
+        align-items: start;
     }
     /* column size change*/
-    .invoice-subtotal .row .col
-    {
+    .invoice-subtotal .row .col {
         width: 50% !important;
     }
     .invoice-date-number .col,
     .invoice-logo-title .col,
-    .invoice-info .col
-    {
+    .invoice-info .col {
         width: 50% !important;
     }
 }
 
-@page
-{
+@page {
     /* auto is the initial value */
-    margin: 0;
+    size: A4;
+    margin-left: -250px;
+    margin-right: -250px;
+    margin-top: -100px;
     padding: 0;
 
     size: auto;
